Changelog
=========


2.5.0 (unreleased)
------------------

- Drop Plone 4.2 support.
  [jone]

- Add ftw.simplelayout support (page and block states).
  [jone]

- Keep tuple / set types when sending data.
  [jone]

- Support dexterity relations.
  [jone]


2.4.1 (2014-12-02)
------------------

- BugFix in property adapter: Setting a property can raise a AttributeError
  if the content type influence the property behavior.
  Example see https://github.com/seantis/seantis.dir.contacts/blob/a0360a35e41afb1a8e0fa4ff553b423e0f731eee/seantis/dir/contacts/contact.py#L83
  [mathias.leimgruber]

2.4.0 (2014-02-04)
------------------

- plonetheme.onegov: Support custom styles.
  [mathias.leimgruber]

- plone.app.collection: Implement publishing the query.
  [mathias.leimgruber]


2.3.3 (2013-11-12)
------------------

- Fix publishing imagelayout of contentpage-description block.
  [elioschmutz]


2.3.2 (2013-09-24)
------------------

- Dexterity: add support for richtext fields.
  [jone]


2.3.1 (2013-09-16)
------------------

- Dexterity: add support for plone.namedfile images.
  [jone]


2.3.0 (2013-09-02)
------------------

- Fix publishing imagelayout of contentpage-description block.
  [elioschmutz]

- Implement simplelayout block adapter.
  The adapter adds publisher support for simplelayout block settings,
  such as dimensions, height, position etc.
  [jone]


2.2 (2013-07-18)
----------------

- Implemented adapter to publish ShopItem Variations
  (those are stored in annotations and therefore haven't been published before).
  [lgraf]


2.1.1 (2013-06-21)
------------------

- Fix Unauthorized exception in back references adapter
  caused by Products.PloneHotfix20130618.
  [jone]


2.1.0 (2013-06-13)
------------------

- Add geo data adapter to publish coordinates of c.geo.
  [mathias.leimgruber]


2.0.1 (2013-06-03)
------------------

- Do not publish properties of site root.
  [jone]


2.0 (2013-05-24)
----------------
